bugfix: select pitch octave button, too

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -183,7 +183,7 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch octave count</h3>
             <div class="ct-chart-pitch-octave"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
 
         <div class="chart-container">
