add download legend buttons to most of the charts

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -151,7 +151,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
 
         </div>
@@ -161,12 +162,18 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
+            </button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord quality count</h3>
             <div class="ct-chart-quality"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
     </div>
@@ -179,11 +186,19 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
+            </button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch octave count</h3>
             <div class="ct-chart-pitch-octave"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
+                chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
+            </button>
         </div>
 
         <div class="chart-container">
@@ -194,6 +209,8 @@
                 <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                     chart
                 </button>
+                <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            </button>
             </div>
         </div>
 
@@ -207,12 +224,16 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            </button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests - count by name</h3>
             <div class="ct-chart-duration-fullname-rests-count"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
             </button>
         </div>
         <div class="chart-container">
@@ -221,12 +242,16 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            </button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-rests-count"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
             </button>
         </div>
         <div class="chart-container">
@@ -235,12 +260,16 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            </button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Sound to silence ratio</h3>
             <div class="ct-chart-sound_silence_ratio"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
             </button>
         </div>
     </div>
@@ -254,12 +283,16 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            </button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Key mode count</h3>
             <div class="ct-chart-key-mode"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
             </button>
         </div>
         <div class="chart-container" id="probabilityCharts">
