--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -145,7 +145,7 @@
             <h3 class="uk-text-center">Roman numeral chord count</h3>
             <div id="tooltip-div1"></div>
             <div class="uk-width-1-1" id="chordChartName">
-                <div class="ct-chart-name"></div>
+                <div class="ct-chart-chord-name"></div>
 
             </div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
@@ -158,7 +158,7 @@
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord root count</h3>
-            <div class="ct-chart-root"></div>
+            <div class="ct-chart-chord-root"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
@@ -168,7 +168,7 @@
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord quality count</h3>
-            <div class="ct-chart-quality"></div>
+            <div class="ct-chart-chord-quality"></div>
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
