--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -10,7 +10,6 @@
     {# fontawesome for icons #}
     <link rel="stylesheet" type="text/css" href="{% static "/css/distantAnalysis.css" %}"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    <script src="{% static "js/SVG2Bitmap.min.js" %}"></script>
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartist-plugin-legend@0.6.2/chartist-plugin-legend.min.js"></script>
     <script src='https://cdn.jsdelivr.net/lodash/4.17.2/lodash.min.js'></script>
@@ -74,7 +73,7 @@
                     <div class="uk-accordion-content">
                         {% if  explanations %}
 
-                            <div uk-grid>
+                            <div uk-grid class="uk-flex-center uk-text-center uk-grid-match">
                                 <div class="uk-width-1-3">
                                     <div class="uk-card uk-card-default uk-card-body">
                                         <h2 class="uk-card-title">Chords</h2>
@@ -206,12 +205,13 @@
             <div id="tooltip-div2"></div>
             <div class="uk-width-1-1" id="pitchOctaveName">
                 <div class="ct-chart-pitch-octave-name"></div>
-                <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
-                    chart
-                </button>
-                <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
-            </button>
             </div>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
+                chart
+            </button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
+            </button>
         </div>
 
     </div>
@@ -224,7 +224,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -233,7 +234,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -242,7 +244,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -251,7 +254,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -260,7 +264,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -269,7 +274,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
     </div>
@@ -283,7 +289,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -292,7 +299,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container" id="probabilityCharts">
