--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 #stickyNav {
-    background-color: rgba(187, 222, 251, 0.5)
+    background-color: rgba(187, 222, 251)
 }
 
 .chart-container {
@@ -141,9 +141,6 @@ h2 {
     overflow: scroll;
 }
 
-#masterNav {
-    display: none;
-}
 
 #boxplots {
     width: -webkit-fill-available;
