--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -20,22 +20,28 @@
 <body>
 <header>
     <div class="uk-position-top" id="masterNav">
-            <nav class="uk-navbar-container uk-navbar-default" uk-navbar>
+        <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+            <nav class="uk-navbar-container uk-navbar-default" id="stickyNav" uk-navbar>
                 <div class="uk-navbar-left">
-                    <ul class="uk-navbar-nav">
-
-                        <li><a href="{% url 'MusicAnalyzer:index' %}"><img
-                                src="{% static "/images/logo.png" %}" alt="logo"></a></li>
+                    <ul class="uk-breadcrumb">
+                        <li><a href="{% url 'MusicAnalyzer:index' %}"><img style="padding-bottom: 2em;"
+                                                                           src="{% static "/images/logo.png" %}"
+                                                                           alt="logo"></a></li>
+                        {% block bread_crumb_block %}
+                        {% endblock %}
                     </ul>
+
                 </div>
                 <div class="uk-navbar-right">
-                    <ul class="uk-navbar-nav">
-                        {% block right_nav_block %}{% endblock %}
-                    </ul>
+                    {% block right_nav_block %}
+                        <ul class="uk-navbar-nav">
+                        </ul>
+                    {% endblock %}
                 </div>
             </nav>
         </div>
     </div>
+
 </header>
 <div class="body">
     {% block body_block %}{% endblock %}
