Change background-color according to review

--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -24,7 +24,7 @@ body {
 }
 
 .analysisAspect {
-    background-color: rgba(156, 232, 252, 0.6);
+    background-color: #DCF0F5;
     padding:1em;
 }
 
