--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -16,9 +16,9 @@
 {% endblock %}
 {% block bread_crumb_block %}
     {% if type == "distant" %}
-        <li><span>Distant Hearing Choice</span></li>
+        <li><span> / Distant Hearing Choice</span></li>
     {% elif type == "individual" %}
-        <li><span>Individual Choice</span></li>
+        <li><span>/ Individual Choice</span></li>
     {% endif %}
 {% endblock %}
 {% block body_block %}
