--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -32,7 +32,7 @@
 {% endblock %}
 {% block bread_crumb_block %}
 
-    <li><a href="{% url 'MusicAnalyzer:distant_choice' %}">Distant Hearing Choice</a></li>
+    <li><a href="{% url 'MusicAnalyzer:distant_choice' %}">/ Distant Hearing Choice</a></li>
     <li><span>Distant Hearing Analysis</span></li>
 {% endblock %}
 {% block right_nav_block %}
@@ -45,9 +45,6 @@
 {% endblock %}
 
 {% block body_block %}
-    <header>
-
-    </header>
     <div class="column">
     </div>
     <h2 class="uk-text-center">Distant Analysis</h2>
