--- a/templates/MusicAnalyzer/IndividualAnalysis.html
+++ b/templates/MusicAnalyzer/IndividualAnalysis.html
@@ -16,7 +16,7 @@
 {% endblock %}
 {% block bread_crumb_block %}
 
-    <li><a href="{% url 'MusicAnalyzer:individual_choice' %}">Individual Choice</a></li>
+    <li><a href="{% url 'MusicAnalyzer:individual_choice' %}">/ Individual Choice</a></li>
         <li><span>Individual Analysis</span></li>
 
 {% endblock %}
