--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -136,6 +136,9 @@
             </li>
         </ul>
     </div>
+    <div class="space-m uk-align-center uk-text-center uk-width-1-1 uk-width-3-4@m">
+        <a href="" id="download_json_button" class="uk-button uk-button-default" download="analysis_results_data.json">Download data as json</a>
+    </div>
 
     <hr class="uk-divider-icon">
 
@@ -209,8 +212,9 @@
                 <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                     chart
                 </button>
-                <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
-            </button>
+                <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                    legend
+                </button>
             </div>
         </div>
 
@@ -224,7 +228,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -233,7 +238,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -242,7 +248,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -251,7 +258,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -260,7 +268,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -269,7 +278,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
     </div>
@@ -283,7 +293,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container">
@@ -292,7 +303,8 @@
             <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this
                 chart
             </button>
-            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download legend
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadLegendButton">Download
+                legend
             </button>
         </div>
         <div class="chart-container" id="probabilityCharts">
