display axes where relevant in chart-worker-made charts

--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -11,6 +11,10 @@ body {
     padding-bottom: 2em;
 }
 
+.ct-y-axis-title{
+    font-size: xx-small;
+}
+
 #stickyNav {
     background-color: rgba(187, 222, 251)
 }
