change axis title colors and sizes

--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -11,8 +11,25 @@ body {
     padding-bottom: 2em;
 }
 
-.ct-y-axis-title{
-    font-size: xx-small;
+.ct-y-axis-title {
+    padding: 10px;
+    font-size: small;
+    fill: rgba(0, 0, 0, 0.4);
+}
+
+.ct-x-axis-title {
+    fill: rgba(0, 0, 0, 0.4);
+    font-size: small;
+}
+
+.ct-chart-sound_silence_ratio {
+    height: 15em;
+    padding-bottom: 3em;
+}
+
+div div.key-probability-chart{
+    height:20em;
+    padding-bottom: 3em;
 }
 
 #stickyNav {
@@ -29,7 +46,7 @@ body {
 
 .analysisAspect {
     background-color: #DCF0F5;
-    padding:1em;
+    padding: 1em;
 }
 
 .uk-navbar-right > li:hover > a, .uk-navbar-nav > li > a.uk-open, .uk-navbar-nav > li > a:focus {
@@ -50,23 +67,20 @@ body {
     display: none;
 }
 
-
-
 .ct-legend .ct-series-5:before {
     background-color: #59922b;
     border-color: #59922b;
 }
+
 .ct-legend .ct-series-6:before {
     background-color: #0544d3;
     border-color: #0544d3;
 }
 
-
 .ct-legend .ct-series-7:before {
     background-color: #6b0392;
     border-color: #6b0392;
 }
-
 
 .ct-legend .ct-series-8:before {
     background-color: #dda458;
@@ -78,9 +92,8 @@ body {
     border-color: #eacf7d;
 }
 
-
 .ct-chart .ct-series.ct-series-k .ct-point, .ct-chart .ct-series.ct-series-k .ct-line {
-  stroke: #86797d;
+    stroke: #86797d;
 }
 
 .ct-legend .ct-series-10:before {
@@ -88,9 +101,8 @@ body {
     border-color: #86797d;
 }
 
-
 .ct-chart .ct-series.ct-series-k .ct-point, .ct-chart .ct-series.ct-series-k .ct-line {
-  stroke: #b2c326;
+    stroke: #b2c326;
 }
 
 .ct-legend .ct-series-11:before {
@@ -99,7 +111,7 @@ body {
 }
 
 .ct-chart .ct-series.ct-series-l .ct-point, .ct-chart .ct-series.ct-series-l .ct-line {
-  stroke: #6188e2;
+    stroke: #6188e2;
 }
 
 .ct-legend .ct-series-12:before {
@@ -107,9 +119,7 @@ body {
     border-color: #6188e2;
 }
 
-
-
-.tooltip-show{
+.tooltip-show {
     position: absolute;
     display: inline-block;
     min-width: 5em;
@@ -146,7 +156,6 @@ body {
     overflow: scroll;
 }
 
-
 #boxplots {
     width: -webkit-fill-available;
     width: -moz-available !important; /* WebKit-based browsers will ignore this. */
@@ -154,11 +163,9 @@ body {
     overflow: inherit !important;
 }
 
-
 p {
     padding: 1em;
 }
-
 
 .uk-navbar-right {
     list-style: none;
