--- a/MusicAnalyzer/static/css/individualAnalysis.css
+++ b/MusicAnalyzer/static/css/individualAnalysis.css
@@ -34,6 +34,10 @@
     padding-right: 20px;
 }
 
+#analysisChoiceForm {
+    padding-top: 5em;
+}
+
 .questionForm {
     margin-bottom: 4em;
     border: 1px solid #ddd;
