--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -124,7 +124,7 @@
 
     <hr class="uk-divider-icon">
 
-    <div class="analysisAspect">
+    <div class="analysisAspect space-m uk-align-center uk-width-1-1 uk-width-3-4@m">
         <h2 class="uk-text-center">Chords</h2>
     </div>
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="chords">
@@ -165,7 +165,7 @@
         </div>
     </div>
     <hr class="uk-divider-icon">
-    <div class="analysisAspect">
+    <div class="analysisAspect space-m uk-align-center uk-width-1-1 uk-width-3-4@m">
         <h2 class="uk-text-center">Pitches</h2>
     </div>
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="pitches">
@@ -206,7 +206,7 @@
 
     </div>
     <hr class="uk-divider-icon">
-    <div class="analysisAspect">
+    <div class="analysisAspect space-m uk-align-center uk-width-1-1 uk-width-3-4@m">
         <h2 class="uk-text-center">Durations</h2>
     </div>
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="durations">
@@ -274,7 +274,7 @@
 
     <hr class="uk-divider-icon">
 
-    <div class="analysisAspect">
+    <div class="analysisAspect space-m uk-align-center uk-width-1-1 uk-width-3-4@m">
         <h2 class="uk-text-center">Key</h2>
     </div>
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="key">
@@ -304,7 +304,7 @@
 
     </div>
     <hr class="uk-divider-icon">
-    <div class="analysisAspect">
+    <div class="analysisAspect space-m uk-align-center uk-width-1-1 uk-width-3-4@m">
         <h2 class="uk-text-center">Ambitus</h2>
     </div>
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="ambitus">
