add note names to ambitus in individual analysis

--- a/templates/MusicAnalyzer/Results.html
+++ b/templates/MusicAnalyzer/Results.html
@@ -7,6 +7,9 @@
     <h3 class="uk-text-center">Ambitus</h3>
     <p class="uk-text-center">{{ ambitus_interval }} <br/>
         {{ semitones }}</p>
+        <p class="uk-text-center">
+            {{ lowest_pitch }} to {{ highest_pitch }}
+        </p>
 <div class=" uk-align-center uk-width-1-1 uk-width-1-4@m"
          style="background: #f2f7fc; border: 1px solid #ddd;">
         <div class="uk-padding-small" id="ambitusCanvas" style="padding-top:0;"></div>
