make distant hearing explanation better (remove TODO)

--- a/templates/MusicAnalyzer/Choice.html
+++ b/templates/MusicAnalyzer/Choice.html
@@ -30,7 +30,7 @@
         <ul uk-accordion>
             <li>
                 <a class="uk-accordion-title" href="#">What can I do here?</a>
-                <div class="uk-accordion-content">{{ explanation }}</div>
+                <div class="uk-accordion-content">{{ explanation|linebreaks }}</div>
             </li>
         </ul>
     </div>
